--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Wed May 09 14:43:04 CEST 2018
-app.grails.version=2.5.6
+#Fri Nov 09 10:21:50 CET 2018
+app.grails.version=2.5.3
 app.name=kpm-web
 app.version=1.1.4
 kpm.version=5.0.0.002
